--- a/redmine/tpl/redmine-controller.yaml
+++ b/redmine/tpl/redmine-controller.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
       - name: redmine
-        image: gcr.io/bitnami-workspace/redmine:3.2.1-0
+        image: bitnami/redmine:3.2.1-0
         env:
         - name: MARIADB_HOST
           value: mariadb
