Added provider label to template metadata

--- a/redmine/tpl/redmine-controller.yaml
+++ b/redmine/tpl/redmine-controller.yaml
@@ -18,6 +18,7 @@ spec:
         app: redmine
         version: 3.2.1-0
         heritage: bitnami
+        provider: redmine-server
     spec:
       containers:
       - name: redmine
