--- a/redmine/tpl/redmine-controller.yaml
+++ b/redmine/tpl/redmine-controller.yaml
@@ -27,15 +27,15 @@ spec:
         - name: MARIADB_PORT
           value: "3306"
         - name: MARIADB_PASSWORD
-          value: {{default "bitnami" .mariadbPassword}}
+          value: {{.mariadbPassword}}
         - name: REDMINE_USERNAME
-          value: {{default "user" .redmineUser}}
+          value: {{.redmineUser}}
         - name: REDMINE_PASSWORD
-          value: {{default "bitnami" .redminePassword}}
+          value: {{.redminePassword}}
         - name: REDMINE_EMAIL
-          value: {{default "user@example.com" .redmineEmail}}
+          value: {{.redmineEmail}}
         - name: REDMINE_LANG
-          value: {{default "en" .redmineLanguage}}
+          value: {{.redmineLanguage}}
         ports:
         - name: redmine-http
           containerPort: 3000
