--- a/redmine/tpl/values.toml
+++ b/redmine/tpl/values.toml
@@ -3,3 +3,8 @@ redmineUser = ""
 redminePassword = ""
 redmineEmail = ""
 redmineLanguage = ""
+smtpHost = ""
+smtpPort = ""
+smtpUser = ""
+smtpPassword = ""
+smtpTls = ""
