--- a/mariadb/Chart.yaml
+++ b/mariadb/Chart.yaml
@@ -1,5 +1,7 @@
 name: mariadb
-home: https://github.com/bitnami/charts/tree/master/mariadb
+home: https://mariadb.org
+source:
+- https://github.com/bitnami/bitnami-docker-mariadb
 version: 0.1.0
 description: Chart for MariaDB
 maintainers:
