--- a/redmine/Chart.yaml
+++ b/redmine/Chart.yaml
@@ -1,5 +1,7 @@
 name: redmine
-home: https://github.com/bitnami/charts/tree/master/redmine
+home: http://www.redmine.org/
+source:
+- https://github.com/bitnami/bitnami-docker-redmine
 version: 0.1.0
 description: A flexible project management web application.
 maintainers:
