charts: use shorthand names for controllers and services

--- a/redmine/tpl/redmine-rc.yaml
+++ b/redmine/tpl/redmine-rc.yaml
@@ -1,4 +1,4 @@
-#helm:generate helm tpl -d tpl/values.toml -o manifests/redmine-controller.yaml $HELM_GENERATE_FILE
+#helm:generate helm tpl -d tpl/values.toml -o manifests/redmine-rc.yaml $HELM_GENERATE_FILE
 apiVersion: v1
 kind: ReplicationController
 metadata:
