--- a/mariadb/tpl/mariadb-rc.yaml
+++ b/mariadb/tpl/mariadb-rc.yaml
@@ -1,4 +1,4 @@
-#helm:generate helm tpl -d tpl/values.toml -o manifests/mariadb-controller.yaml $HELM_GENERATE_FILE
+#helm:generate helm tpl -d tpl/values.toml -o manifests/mariadb-rc.yaml $HELM_GENERATE_FILE
 apiVersion: v1
 kind: ReplicationController
 metadata:
