--- a/mariadb/manifests/mariadb-svc.yaml
+++ b/mariadb/manifests/mariadb-svc.yaml
@@ -7,6 +7,8 @@ metadata:
     heritage: bitnami
 spec:
   ports:
-  - port: 3306
+  - name: mysql
+    port: 3306
+    targetPort: mysql
   selector:
     provider: mariadb
