--- a/mariadb/tpl/mariadb-rc.yaml
+++ b/mariadb/tpl/mariadb-rc.yaml
@@ -23,11 +23,11 @@ spec:
         image: bitnami/mariadb:5.5.48-0-r01
         env:
         - name: MARIADB_USER
-          value: "{{.mariadbUser}}"
+          value: {{ .mariadbUser | quote }}
         - name: MARIADB_PASSWORD
-          value: "{{.mariadbPassword}}"
+          value: {{ .mariadbPassword | quote }}
         - name: MARIADB_DATABASE
-          value: "{{.mariadbDatabase}}"
+          value: {{ .mariadbDatabase | quote }}
         ports:
         - name: mysql
           containerPort: 3306
