--- a/memcached/tpl/memcached-rc.yaml
+++ b/memcached/tpl/memcached-rc.yaml
@@ -23,7 +23,7 @@ spec:
         image: bitnami/memcached:1.4.25-1
         env:
         - name: MEMCACHED_PASSWORD
-          value: "{{.memcachedPassword}}"
+          value: {{ .memcachedPassword | quote }}
         ports:
         - name: memcache
           containerPort: 11211
