--- a/redmine/tpl/values.toml
+++ b/redmine/tpl/values.toml
@@ -1,8 +1,8 @@
 mariadbPassword = ""
-redmineUser = ""
-redminePassword = ""
-redmineEmail = ""
-redmineLanguage = ""
+redmineUser = "user"
+redminePassword = "bitnami"
+redmineEmail = "user@example.com"
+redmineLanguage = "en"
 smtpHost = ""
 smtpPort = ""
 smtpUser = ""
