--- a/redmine/manifests/redmine-rc.yaml
+++ b/redmine/manifests/redmine-rc.yaml
@@ -32,13 +32,13 @@ spec:
         - name: MARIADB_PASSWORD
           value: ""
         - name: REDMINE_USERNAME
-          value: ""
+          value: "user"
         - name: REDMINE_PASSWORD
-          value: ""
+          value: "bitnami"
         - name: REDMINE_EMAIL
-          value: ""
+          value: "user@example.com"
         - name: REDMINE_LANG
-          value: ""
+          value: "en"
         - name: SMTP_HOST
           value: ""
         - name: SMTP_PORT
