--- a/wildfly/manifests/wildfly-rc.yaml
+++ b/wildfly/manifests/wildfly-rc.yaml
@@ -23,7 +23,7 @@ spec:
         image: bitnami/wildfly:10.0.0-0
         env:
         - name: WILDFLY_PASSWORD
-          value: ""
+          value: "wildfly"
         ports:
         - name: http
           containerPort: 8080
