mariadb: add `.mariadbRootPassword` configuration parameter
`bitnami/mariadb:10.1.13-r0` introduces the `MARIADB_ROOT_PASSWORD` env
variable for setting the password for the MariaDB `root` user.

--- a/mariadb-cluster/manifests/mariadb-slave-rc.yaml
+++ b/mariadb-cluster/manifests/mariadb-slave-rc.yaml
@@ -24,8 +24,10 @@ spec:
       - name: mariadb
         image: bitnami/mariadb:10.1.14-r0
         env:
+        - name: MARIADB_ROOT_PASSWORD
+          value: "my-root-password"
         - name: MARIADB_USER
-          value: "root"
+          value: "my-user"
         - name: MARIADB_PASSWORD
           value: "my-password"
         - name: MARIADB_DATABASE
@@ -35,7 +37,7 @@ spec:
         - name: MARIADB_MASTER_HOST
           value: mariadb-master
         - name: MARIADB_MASTER_USER
-          value: "root"
+          value: "my-user"
         - name: MARIADB_MASTER_PASSWORD
           value: "my-password"
         - name: MARIADB_REPLICATION_USER
