--- a/mariadb-cluster/manifests/mariadb-master-rc.yaml
+++ b/mariadb-cluster/manifests/mariadb-master-rc.yaml
@@ -25,8 +25,10 @@ spec:
       - name: mariadb
         image: bitnami/mariadb:10.1.14-r0
         env:
+        - name: MARIADB_ROOT_PASSWORD
+          value: "my-root-password"
         - name: MARIADB_USER
-          value: "root"
+          value: "my-user"
         - name: MARIADB_PASSWORD
           value: "my-password"
         - name: MARIADB_DATABASE
