mariadb-cluster: explicitly set value of `MARIADB_MASTER_PORT`

--- a/mariadb-cluster/tpl/mariadb-slave-rc.yaml
+++ b/mariadb-cluster/tpl/mariadb-slave-rc.yaml
@@ -36,6 +36,8 @@ spec:
           value: slave
         - name: MARIADB_MASTER_HOST
           value: mariadb-master
+        - name: MARIADB_MASTER_PORT
+          value: "3306"
         - name: MARIADB_MASTER_USER
           value: {{ .mariadbUser | quote }}
         - name: MARIADB_MASTER_PASSWORD
