--- a/drupal/tpl/values.toml
+++ b/drupal/tpl/values.toml
@@ -1,4 +1,4 @@
 mariadbPassword = ""
-drupalUser = ""
-drupalPassword = ""
-drupalEmail = ""
+drupalUser = "user"
+drupalPassword = "bitnami"
+drupalEmail = "user@example.com"
