--- a/tomcat/manifests/tomcat-rc.yaml
+++ b/tomcat/manifests/tomcat-rc.yaml
@@ -10,18 +10,20 @@ spec:
   replicas: 1
   selector:
     provider: tomcat
-    version: 7.0.68-0
+    version: 8.0.35-r0
   template:
     metadata:
       labels:
         provider: tomcat
-        version: 7.0.68-0
+        version: 8.0.35-r0
         heritage: bitnami
     spec:
       containers:
       - name: tomcat
-        image: bitnami/tomcat:7.0.68-0
+        image: bitnami/tomcat:8.0.35-r0
         env:
+        - name: TOMCAT_USER
+          value: "user"
         - name: TOMCAT_PASSWORD
           value: ""
         ports:
@@ -40,12 +42,8 @@ spec:
           initialDelaySeconds: 5
           timeoutSeconds: 1
         volumeMounts:
-        - name: webapps
-          mountPath: /app
-        - name: conf
-          mountPath: /bitnami/tomcat/conf
+        - name: data
+          mountPath: /bitnami/tomcat
       volumes:
-      - name: webapps
-        emptyDir: {}
-      - name: conf
+      - name: data
         emptyDir: {}
