--- a/redmine/tpl/redmine-rc.yaml
+++ b/redmine/tpl/redmine-rc.yaml
@@ -12,25 +12,25 @@ spec:
   selector:
     app: redmine
     provider: redmine-server
-    version: 3.2.1-2
+    version: 3.2.2-r0
   template:
     metadata:
       labels:
         app: redmine
         provider: redmine-server
-        version: 3.2.1-2
+        version: 3.2.2-r0
         heritage: bitnami
     spec:
       containers:
       - name: redmine
-        image: bitnami/redmine:3.2.1-2
+        image: bitnami/redmine:3.2.2-r0
         env:
         - name: MARIADB_HOST
           value: "mariadb"
         - name: MARIADB_PORT
           value: "3306"
         - name: MARIADB_PASSWORD
-          value: {{ .mariadbPassword | quote }}
+          value: {{ .mariadbRootPassword | quote }}
         - name: REDMINE_USERNAME
           value: {{ .redmineUser | quote }}
         - name: REDMINE_PASSWORD
