Upgrade bitnami/mariadb image in mariadb charts (#40)
* mariadb: update to `bitnami/mariadb:10.1.14-r0`

* mariadb: add `.mariadbRootPassword` configuration parameter

`bitnami/mariadb:10.1.13-r0` introduces the `MARIADB_ROOT_PASSWORD` env
variable for setting the password for the MariaDB `root` user.

* mariadb-cluster: explicitly set value of `MARIADB_MASTER_PORT`

* bump `mariadb` and `mariadb-cluster` chart versions to `0.2.0`

--- a/mariadb-cluster/tpl/mariadb-master-rc.yaml
+++ b/mariadb-cluster/tpl/mariadb-master-rc.yaml
@@ -12,21 +12,21 @@ spec:
   selector:
     provider: mariadb
     mode: master
-    version: 5.5.48-0-r01
+    version: 10.1.14-r0
   template:
     metadata:
       labels:
         provider: mariadb
         mode: master
-        version: 5.5.48-0-r01
+        version: 10.1.14-r0
         heritage: bitnami
     spec:
       containers:
       - name: mariadb
-        image: bitnami/mariadb:5.5.48-0-r01
-        args:
-        - --max_connect_errors=1000
+        image: bitnami/mariadb:10.1.14-r0
         env:
+        - name: MARIADB_ROOT_PASSWORD
+          value: {{ .mariadbRootPassword | quote }}
         - name: MARIADB_USER
           value: {{ .mariadbUser | quote }}
         - name: MARIADB_PASSWORD
@@ -58,11 +58,7 @@ spec:
           timeoutSeconds: 1
         volumeMounts:
         - name: data
-          mountPath: /bitnami/mariadb/data
-        - name: conf
-          mountPath: /bitnami/mariadb/conf
+          mountPath: /bitnami/mariadb
       volumes:
       - name: data
-        emptyDir: {}
-      - name: conf
         emptyDir: {}
