--- a/mariadb-cluster/manifests/mariadb-master-rc.yaml
+++ b/mariadb-cluster/manifests/mariadb-master-rc.yaml
@@ -12,23 +12,23 @@ spec:
   selector:
     provider: mariadb
     mode: master
-    version: 5.5.48-0-r01
+    version: 10.1.14-r0
   template:
     metadata:
       labels:
         provider: mariadb
         mode: master
-        version: 5.5.48-0-r01
+        version: 10.1.14-r0
         heritage: bitnami
     spec:
       containers:
       - name: mariadb
-        image: bitnami/mariadb:5.5.48-0-r01
-        args:
-        - --max_connect_errors=1000
+        image: bitnami/mariadb:10.1.14-r0
         env:
+        - name: MARIADB_ROOT_PASSWORD
+          value: "my-root-password"
         - name: MARIADB_USER
-          value: "root"
+          value: "my-user"
         - name: MARIADB_PASSWORD
           value: "my-password"
         - name: MARIADB_DATABASE
@@ -58,11 +58,7 @@ spec:
           timeoutSeconds: 1
         volumeMounts:
         - name: data
-          mountPath: /bitnami/mariadb/data
-        - name: conf
-          mountPath: /bitnami/mariadb/conf
+          mountPath: /bitnami/mariadb
       volumes:
       - name: data
-        emptyDir: {}
-      - name: conf
         emptyDir: {}
