memcached: added secrets manifest for sensitive variables.
A secret volume named `memcached` is created to store password
variables.

--- a/memcached/manifests/memcached-rc.yaml
+++ b/memcached/manifests/memcached-rc.yaml
@@ -25,7 +25,10 @@ spec:
         - name: MEMCACHED_USER
           value: ""
         - name: MEMCACHED_PASSWORD
-          value: ""
+          valueFrom:
+            secretKeyRef:
+              name: memcached
+              key: memcached-password
         ports:
         - name: memcache
           containerPort: 11211
