--- a/mongodb/manifests/mongodb-rc.yaml
+++ b/mongodb/manifests/mongodb-rc.yaml
@@ -23,11 +23,17 @@ spec:
         image: bitnami/mongodb:3.2.7-r0
         env:
         - name: MONGODB_ROOT_PASSWORD
-          value: ""
+          valueFrom:
+            secretKeyRef:
+              name: mongodb
+              key: mongodb-root-password
         - name: MONGODB_USER
           value: ""
         - name: MONGODB_PASSWORD
-          value: ""
+          valueFrom:
+            secretKeyRef:
+              name: mongodb
+              key: mongodb-password
         - name: MONGODB_DATABASE
           value: ""
         ports:
