postgresql: added secrets manifest for sensitive variables.
A secret volume named `postgresql` is created to store password
variables.

--- a/postgresql/manifests/postgresql-rc.yaml
+++ b/postgresql/manifests/postgresql-rc.yaml
@@ -25,7 +25,10 @@ spec:
         - name: POSTGRES_USER
           value: "postgres"
         - name: POSTGRES_PASSWORD
-          value: ""
+          valueFrom:
+            secretKeyRef:
+              name: postgresql
+              key: postgres-password
         - name: POSTGRES_DB
           value: ""
         ports:
