tomcat: added secrets manifest for sensitive variables.
A secret volume named `tomcat` is created to store password variables.

--- a/tomcat/tpl/tomcat-rc.yaml
+++ b/tomcat/tpl/tomcat-rc.yaml
@@ -25,7 +25,10 @@ spec:
         - name: TOMCAT_USER
           value: {{ .tomcatUser | quote }}
         - name: TOMCAT_PASSWORD
-          value: {{ .tomcatPassword | quote }}
+          valueFrom:
+            secretKeyRef:
+              name: tomcat
+              key: tomcat-password
         ports:
         - name: http
           containerPort: 8080
