--- a/tomcat/manifests/tomcat-rc.yaml
+++ b/tomcat/manifests/tomcat-rc.yaml
@@ -25,7 +25,10 @@ spec:
         - name: TOMCAT_USER
           value: "user"
         - name: TOMCAT_PASSWORD
-          value: ""
+          valueFrom:
+            secretKeyRef:
+              name: tomcat
+              key: tomcat-password
         ports:
         - name: http
           containerPort: 8080
