wildfly: added secrets manifest for sensitive variables.
A secret volume named `wildfly` is created to store password variables.

--- a/wildfly/manifests/wildfly-rc.yaml
+++ b/wildfly/manifests/wildfly-rc.yaml
@@ -25,7 +25,10 @@ spec:
         - name: WILDFLY_USER
           value: "user"
         - name: WILDFLY_PASSWORD
-          value: "password"
+          valueFrom:
+            secretKeyRef:
+              name: wildfly
+              key: wildfly-password
         ports:
         - name: http
           containerPort: 8080
