--- a/drupal/manifests/drupal-rc.yaml
+++ b/drupal/manifests/drupal-rc.yaml
@@ -30,11 +30,17 @@ spec:
         - name: MARIADB_PORT
           value: "3306"
         - name: MARIADB_PASSWORD
-          value: ""
+          valueFrom:
+            secretKeyRef:
+              name: drupal
+              key: mariadb-root-password
         - name: DRUPAL_USERNAME
           value: "user"
         - name: DRUPAL_PASSWORD
-          value: "bitnami"
+          valueFrom:
+            secretKeyRef:
+              name: drupal
+              key: drupal-password
         - name: DRUPAL_EMAIL
           value: "user@example.com"
         ports:
