--- a/drupal/tpl/drupal-rc.yaml
+++ b/drupal/tpl/drupal-rc.yaml
@@ -30,11 +30,17 @@ spec:
         - name: MARIADB_PORT
           value: "3306"
         - name: MARIADB_PASSWORD
-          value: {{ .mariadbRootPassword | quote }}
+          valueFrom:
+            secretKeyRef:
+              name: drupal
+              key: mariadb-root-password
         - name: DRUPAL_USERNAME
           value: {{ .drupalUser | quote }}
         - name: DRUPAL_PASSWORD
-          value: {{ .drupalPassword | quote }}
+          valueFrom:
+            secretKeyRef:
+              name: drupal
+              key: drupal-password
         - name: DRUPAL_EMAIL
           value: {{ .drupalEmail | quote }}
         ports:
