drupal: added secrets manifest for sensitive variables.
A secret volume named `drupal` is created to store password variables.

--- a/drupal/tpl/drupal-rc.yaml
+++ b/drupal/tpl/drupal-rc.yaml
@@ -32,7 +32,7 @@ spec:
         - name: MARIADB_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: drupal
+              name: mariadb
               key: mariadb-root-password
         - name: DRUPAL_USERNAME
           value: {{ .drupalUser | quote }}
