--- a/joomla/manifests/joomla-rc.yaml
+++ b/joomla/manifests/joomla-rc.yaml
@@ -30,11 +30,17 @@ spec:
         - name: MARIADB_PORT
           value: "3306"
         - name: MARIADB_PASSWORD
-          value: ""
+          valueFrom:
+            secretKeyRef:
+              name: mariadb
+              key: mariadb-root-password
         - name: JOOMLA_USERNAME
           value: "user"
         - name: JOOMLA_PASSWORD
-          value: "bitnami"
+          valueFrom:
+            secretKeyRef:
+              name: joomla
+              key: joomla-password
         - name: JOOMLA_EMAIL
           value: "user@example.com"
         - name: SMTP_HOST
@@ -44,7 +50,10 @@ spec:
         - name: SMTP_USER
           value: ""
         - name: SMTP_PASSWORD
-          value: ""
+          valueFrom:
+            secretKeyRef:
+              name: joomla
+              key: smtp-password
         - name: SMTP_PROTOCOL
           value: ""
         ports:
