--- a/joomla/tpl/joomla-rc.yaml
+++ b/joomla/tpl/joomla-rc.yaml
@@ -30,11 +30,17 @@ spec:
         - name: MARIADB_PORT
           value: "3306"
         - name: MARIADB_PASSWORD
-          value: {{ .mariadbRootPassword | quote }}
+          valueFrom:
+            secretKeyRef:
+              name: mariadb
+              key: mariadb-root-password
         - name: JOOMLA_USERNAME
           value: {{ .joomlaUser | quote }}
         - name: JOOMLA_PASSWORD
-          value: {{ .joomlaPassword | quote }}
+          valueFrom:
+            secretKeyRef:
+              name: joomla
+              key: joomla-password
         - name: JOOMLA_EMAIL
           value: {{ .joomlaEmail | quote }}
         - name: SMTP_HOST
@@ -44,7 +50,10 @@ spec:
         - name: SMTP_USER
           value: {{ .smtpUser | quote }}
         - name: SMTP_PASSWORD
-          value: {{ .smtpPassword | quote }}
+          valueFrom:
+            secretKeyRef:
+              name: joomla
+              key: smtp-password
         - name: SMTP_PROTOCOL
           value: {{ .smtpProtocol | quote }}
         ports:
