--- a/mediawiki/tpl/mediawiki-rc.yaml
+++ b/mediawiki/tpl/mediawiki-rc.yaml
@@ -30,11 +30,17 @@ spec:
         - name: MARIADB_PORT
           value: "3306"
         - name: MARIADB_PASSWORD
-          value: {{ .mariadbRootPassword | quote }}
+          valueFrom:
+            secretKeyRef:
+              name: mariadb
+              key: mariadb-root-password
         - name: MEDIAWIKI_USERNAME
           value: {{ .mediawikiUser | quote }}
         - name: MEDIAWIKI_PASSWORD
-          value: {{ .mediawikiPassword | quote }}
+          valueFrom:
+            secretKeyRef:
+              name: mediawiki
+              key: mediawiki-password
         - name: MEDIAWIKI_EMAIL
           value: {{ .mediawikiEmail | quote }}
         - name: MEDIAWIKI_WIKI_NAME
@@ -48,7 +54,10 @@ spec:
         - name: SMTP_USER
           value: {{ .smtpUser | quote }}
         - name: SMTP_Password
-          value: {{ .smtpPassword | quote }}
+          valueFrom:
+            secretKeyRef:
+              name: mediawiki
+              key: smtp-password
         ports:
         - name: http
           containerPort: 80
